testsuite/tests/check_ambiguity/inheritance/test.out
test.adb:23:10: error: name resolution is ambiguous
23 |          Bar (X);
   |          ^^^^^^^^

test.adb:51:4: error: name resolution is ambiguous
51 |    Bar (X);
   |    ^^^^^^^^

Checked 37 entry points.
Done.
